# code-checker-example

./: .clang-tidy  .gitignore  README.md
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
app/: CMakeLists.txt  prj.conf  west.yml
app/config/: codechecker.yml  skip.codechecker
app/src/: main.cpp  worker.cpp  worker.hh
non-zephyr-app/: Makefile  main.cpp
